# VisualSafety

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  main.cpp
qml/: Main.qml
qml/components/: I18n.qml  MetricCard.qml  SectionCard.qml  StatusTag.qml  ThemedButton.qml  ThemedComboBox.qml  ThemedScrollBar.qml  ThemedSwitch.qml  ThemedTextField.qml  qmldir
qml/pages/: ActionsPage.qml  AlertsPage.qml  AppsPage.qml  CredentialsPage.qml  LogsPage.qml  NetworkPage.qml  OverviewPage.qml  PermissionsPage.qml  PluginRuntimePage.qml  PluginsPage.qml  PortsPage.qml  PublicExposurePage.qml  PublicPage.qml
scripts/: package_release.ps1
src/: main.cpp
src/core/: appconfig.cpp  appconfig.h  securitycontroller.cpp  securitycontroller.h  securitycontroller_collectors.cpp  thememanager.cpp  thememanager.h
src/icons/: emojiicons.cpp  emojiicons.h
